# Ejercicios-Examen

./: .gitignore  README.md
Ejercicio-1/: ejercicio1.py  outputFrasePalindroma.txt  outputNoPalindroma.txt  problema.txt  pruebaUnitaria.py  pruebaUnitariaFrasePalindroma.py  readme.md  test_2.py  test_3.py  test_4.py  test_5.py
Ejercicio-2/: ejercicio2.py  output_test_score_1.txt  output_test_score_2.txt  output_test_score_3.txt  output_test_score_4.txt  output_test_score_5.txt  problema.txt  test_score_1.py  test_score_2.py  test_score_3.py  test_score_4.py  test_score_5.py
Ejercicio-3/: README.md  ejercicio3.py  problema.txt  test_jumps_1.py  test_jumps_2.py  test_jumps_3.py  test_jumps_4.py  test_jumps_5.py
Ejercicio-4/: README.md  customer_classification_model.h5  ejercicio4.py  models.py  problema.txt  pyproject.toml  requirements.txt  test_1.py  test_2.py  test_3.py  test_4.py  test_5.py
