[tool.poetry]
name = "ejercicio-4"
version = "0.1.0"
description = ""
authors = ["Luis Adames <adames1601@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.2"
scikit-learn = "^0.24.2"
tensorflow = "^2.6.0"
keras = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"